--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -75,9 +75,12 @@ html(lang="en")
 				.lits-button
 					.btn
 						button(data-fancybox-close) Hủy bỏ
-					.btn
-						a(href="#") Đi ngay
+					.btn.btn-google
+						a(href="#") Google
+					.btn.btn-facebook
+						a(href="#") Facebook
 		block scripts
-		script(async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v5.0&appId=774359209430335" charset="utf-8")
+		script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
+		script(src='https://apis.google.com/js/platform.js?onload=onLoadCallback')
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
