--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -3,26 +3,27 @@ header
 		.row.no-gutters
 			.button-mobile
 				span.line
-			.main-menu
-				.list-logo
-					.item
-						a(href="#")
-							img(src="./assets/images/new-vline/logo-heartbeat.png", alt="", srcset="")
-				.list-nav
+			.wrapper-header
+				.main-menu
+					.list-logo
+						.item
+							a(href="#")
+								img(src="./assets/images/new-vline/logo-heartbeat.png", alt="", srcset="")
+					.list-nav
+						.nav-item
+							.avatar
+								img.ofc(src="./assets/images/new-vline/logo-vline.png", alt="", srcset="")
+							.login
+								.button-login
+									img.ofc(src="./assets/images/new-vline/user-icon.png", alt="", srcset="")
+				.navBar
 					.nav-item
-						.avatar
-							img.ofc(src="./assets/images/new-vline/logo-vline.png", alt="", srcset="")
-						.login
-							.button-login
-								img.ofc(src="./assets/images/new-vline/user-icon.png", alt="", srcset="")
-			.navBar
-				.nav-item
-					a.nav-link(href="") TRANG CHỦ
-				.nav-item
-					a.nav-link(href="") VLIVE AWARDS
-				.nav-item
-					a.nav-link(href="") BÌNH CHỌN
-				.nav-item
-					a.nav-link(href="") VHEARTBEAT
-				.nav-item
-					a.nav-link(href="") QUY ĐỊNH
+						a.nav-link(href="") TRANG CHỦ
+					.nav-item
+						a.nav-link(href="") VLIVE AWARDS
+					.nav-item
+						a.nav-link(href="") BÌNH CHỌN
+					.nav-item
+						a.nav-link(href="") VHEARTBEAT
+					.nav-item
+						a.nav-link(href="") QUY ĐỊNH
