--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -2,9 +2,9 @@
 	.container
 		.container-custom.size-1365px
 			.logo-selection
+				.img
+					img(src="./assets/images/new-vline/vline-award-3.png", alt="")
 				.desc.btn
-					.img
-						img(src="./assets/images/new-vline/vline-award-3.png", alt="")
 					a(href="") BÌNH CHỌN
 			.guide-selection
 				p
@@ -29,197 +29,202 @@
 						.item__wrapper
 							a(href="") BEST STAGE OF V HEARTBEAT
 	.container.block-vote
-		.title
-			h3 ARTIST OF THE YEAR
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
-		.row-wrapper
-			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/2.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
+		.container-custom.size-1365px
+			.title
+				h3 ARTIST OF THE YEAR
+				p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+			.row-wrapper
+				.row.no-gutters.list-vote
+					.item-vote(data-value=1)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=2)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/artist_of_the_year/2.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=3)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
 	.container.block-vote
-		.title
-			h3 BEST VPOP COMBACK
-			p Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng, tạo xu hướng trong năm 2019
-		.row-wrapper
-			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/best_come_back/1.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/best_come_back/2.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/best_come_back/3.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/best_come_back/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=5)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
+		.container-custom.size-1365px
+			.title
+				h3 BEST VPOP COMBACK
+				p Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng, tạo xu hướng trong năm 2019
+			.row-wrapper
+				.row.no-gutters.list-vote
+					.item-vote(data-value=1)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/best_come_back/1.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=2)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/best_come_back/2.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=3)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/best_come_back/3.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/best_come_back/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=5)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/best_come_back/5.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
 	.container.block-vote
-		.title
-			h3 RISING STAR OF THE YEAR
-			p Giải thưởng tôn vinh nhóm nhạc hoạt động xuất sắc trong năm 2019
-		.row-wrapper
-			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
+		.container-custom.size-1365px
+			.title
+				h3 RISING STAR OF THE YEAR
+				p Giải thưởng tôn vinh nhóm nhạc hoạt động xuất sắc trong năm 2019
+			.row-wrapper
+				.row.no-gutters.list-vote
+					.item-vote(data-value=1)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/1.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=2)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/2.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=3)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/3.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/favourite_group_of_the_year/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
 	.container.block-vote
-		.title
-			h3 V MEMBERSHIP COMMUNITY
-			p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
-		.row-wrapper
-			.row.no-gutters.list-vote
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/1.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/2.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/3.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=5)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
+		.container-custom.size-1365px
+			.title
+				h3 V MEMBERSHIP COMMUNITY
+				p Giải thưởng tôn vinh những nghệ sĩ hoạt động nghệ thuật xuất sắc trong năm 2019
+			.row-wrapper
+				.row.no-gutters.list-vote
+					.item-vote(data-value=1)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/1.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=2)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/2.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=3)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/3.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=5)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/rising_star_of_the_year/5.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
 	.container.block-vote
-		.title
-			h3 BEST STAGE OF V HEARTBEAT
-			p Giải thưởng tôn vinh ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích trên sân khấu V Heartbeat LIVE trong năm 2019.
-		.row-wrapper
-			.row.no-gutters.list-vote.border-0
-				.item-vote(data-value=1)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=2)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=3)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=4)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=5)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=6)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
-				.item-vote(data-value=7)
-					figure
-						.box-img
-							img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
-						figcaption
-							h5 Bình Chọn
+		.container-custom.size-1365px
+			.title
+				h3 BEST STAGE OF V HEARTBEAT
+				p Giải thưởng tôn vinh ca sĩ/ nhóm nhạc KPOP có màn trình diễn được yêu thích trên sân khấu V Heartbeat LIVE trong năm 2019.
+			.row-wrapper
+				.row.no-gutters.list-vote.border-0
+					.item-vote(data-value=1)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=2)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=3)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=4)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=5)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=6)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
+					.item-vote(data-value=7)
+						figure
+							.box-img
+								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
+							figcaption
+								h5 Bình Chọn
 	.btn-selection.shadow
 		button#btn-vote(data-url="#") HOÀN TẤT
 .vector
