--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -5,7 +5,8 @@
 				.btn
 					a(href="") THÔNG TIN CHUNG VÀ CÁCH THỨC THAM GIA
 				.info-program__wrapper
-					h3 THÔNG TIN CHUNG
+					.title-table
+						h3 THÔNG TIN CHUNG
 					p
 						!= "Chương trình diễn ra tại <span> NHÀ HÁT HÒA BÌNH NGÀY 16/01/2021, TỪ 14:00 – 21:30</span> với nội dung chính như sau 4H - 21H30"
 					.schedule
@@ -18,14 +19,56 @@
 							.time
 								p 14:00
 							.desc
-								p CHECK IN
+								p FANSIGN
 						.item
 							.time
 								p 14:00
 							.desc
-								p CHECK IN
+								p THẢM VÀNG
 						.item
 							.time
 								p 14:00
 							.desc
-								p CHECK IN
+								p CHƯƠNG TRÌNH CHÍNH
+					.title-table
+						h3 CÁCH THỨC THAM GIA
+					.step-join
+						p
+							!= "<span>1.</span> NHẬP THÔNG TIN CÁ NHÂN"
+						p
+							!= "<span>2.</span> BÌNH CHỌN VLIVE AWARDS"
+						p
+							!= "<span>3.</span> MANG MÃ <span>CODE</span> từ <span>SMS</span> đến sự kiện để check in"
+					p
+						!= "<span>VLIVE </span> sẽ gửi <span>SMS</span> thông tin trúng vé đến số điện thoại bạn đã điền. Danh sách các bạn nhận vé sẽ được đăng tải trên fanpage <span>VLIVE </span> theo link."
+.index-7
+	.container
+		.title-section
+			h3 VLIVE YEAR END PARTY
+		.block-video
+			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+				.img
+					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+				.desc
+					p 2016
+			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+				.img
+					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+				.desc
+					p 2016
+			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+				.img
+					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+				.desc
+					p 2016
+			a(data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk").item-video
+				.img
+					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+				.desc
+					p 2016
+.rule-pc
+	.img
+		img(src="./assets/images/new-vline/rule-pc.png", alt="")
+.rule-mobile
+	.img
+		img(src="./assets/images/new-vline/rule-mobile.jpg", alt="")
