--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -1,16 +1,15 @@
 .index-1
-	.container
-		.swiper-container
-			.swiper-wrapper
-				.swiper-slide
-					.img
-						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
-				.swiper-slide
-					.video
-						<iframe src='https://www.vlive.tv/embed/165817?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen></iframe>
-				.swiper-slide
-					.img
-						img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
-		.swiper-pagination
-		.swiper-button-next
-		.swiper-button-prev
+	.swiper-container
+		.swiper-wrapper
+			.swiper-slide
+				a(href="").img.padding-slide
+					img.ofc(src="./assets/images/new-vline/banner.png", alt="", srcset="")
+			.swiper-slide
+				a(href="").video
+					<iframe src='https://www.vlive.tv/embed/165817?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen></iframe>
+			.swiper-slide
+				a(href="").img
+						img.ofc(src="./assets/images/new-vline/banner-3.png", alt="", srcset="")
+	.swiper-pagination
+	.swiper-button-next
+	.swiper-button-prev
