--- a/src/scss/pages/components/_layout/footer.scss
+++ b/src/scss/pages/components/_layout/footer.scss
@@ -1,32 +1,44 @@
 footer {
-	background: linear-gradient(45deg, rgba(70, 70, 90, 1) 0%, rgba(13, 19, 27, 1) 100%);
-	padding   : 90px 0;
-
+	background: #000000;
+	position: relative;
+	padding   : 50px 0;
+	&::before {
+		content: "";
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: url(../assets/images/new-vline/footer.png) no-repeat;
+		background-size: 100% 100%;
+	}
 	.copy-right {
 		align-self: flex-end;
 		padding   : 0 15px;
-
+		text-align: right;
 		p {
 			font-size: 18px;
-			color    : #707070;
+			color    : #ffffff;
 		}
 	}
-
+	.row {
+		max-width: 1180px;
+		margin: 0 auto;
+	}
 	.list-social-media {
-		margin-left: auto;
 		padding    : 0 15px;
 
 		p {
-			text-align   : right;
 			font-size    : 18px;
-			color        : #707070;
+			color        : #ffffff;
 			margin-bottom: 13px;
 			margin-right : 45px;
 		}
 
 		ul {
 			display        : flex;
-			justify-content: flex-end;
+			justify-content: flex-start;
 
 			li {
 				cursor      : pointer;
