--- a/src/scss/pages/components/_layout/header.scss
+++ b/src/scss/pages/components/_layout/header.scss
@@ -3,7 +3,6 @@ header {
 	height             : auto;
 	z-index            : 500;
 	padding-top: 40px;
-	margin-bottom: 40px;
 	.main-menu {
 		display: flex;
 		height : auto;
@@ -163,10 +162,15 @@ header {
 			}
 		}
 	}
+	.wrapper-header {
+		width: 100%;
+		z-index: 1;
+	}
 	.navBar {
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
+		z-index: 1;
 		.nav-item {
 			position: relative;
 			padding-bottom: 20px;
@@ -187,63 +191,35 @@ header {
 		}
 	}
 	&.active {
-		.main-menu {
+		.wrapper-header {
 			left: 0;
 		}
 	}
 
 	@media (max-width: 1024.98px) {
-		.main-menu {
-			.list-logo {
-				padding-right: 25px;
-
-				.item {
-					padding-right: 10px;
-					margin-right : 10px;
-				}
-			}
-
-			.list-nav {
-				padding-left: 25px;
-
-				.nav-item {
-					.login {
-						.avatar {
-							display: none;
-						}
-
-						.button-login {
-							font-size: 14px;
-						}
-					}
-
-					.list-download {
-						margin-left: 10px;
-					}
-				}
-			}
-		}
-	}
-
-	@media (max-width: 767.98px) {
 		position       : relative;
 		background-size: cover;
 		height         : 50px;
-
+		padding-top: 0;
 		.button-mobile {
 			display: block;
 			margin : 15px 0;
+			z-index: 2;
 		}
 
-		.main-menu {
+		.wrapper-header {
 			position  : absolute;
-			top       : 50px;
+			top       : 0px;
 			left      : -100%;
 			height    : 100vh;
-			background: #1A1A1A;
 			display   : block;
 			transition: .3s all ease-in-out;
-
+			background: #1A1A1A;
+			padding-top: 30px;
+			.main-menu {
+				flex-direction: column;
+				margin-bottom: 20px;
+			}
 			.list-logo {
 				padding-right: 0;
 
@@ -264,11 +240,9 @@ header {
 				padding-left: 0;
 
 				.nav-item {
-					margin       : 0 auto;
-					margin-bottom: 25px;
 
 					&:first-child {
-						margin: 0 auto 25px;
+						margin: 0 auto 0px;
 					}
 
 					.login {
@@ -287,6 +261,17 @@ header {
 				align-items   : flex-start;
 				height        : auto;
 				margin-top    : 25px;
+			}
+			.navBar {
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				.nav-item {
+					padding-bottom: 10px;
+					&::after {
+						height: 2px;
+					}
+				}
 			}
 		}
 	}
