--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,21 +1,38 @@
 .index-1 {
 	margin-bottom: 200px;
+	position: relative;
+	margin-top: -83px;
+	@media (max-width: 1024.98px) {
+		margin-top: -50px;
+		margin-bottom: 40px;
+	}
+	z-index: 0;
 	.container {
 		position: relative;
 	}
 	.swiper-slide {
 		height: auto;
+		.padding-slide {
+			padding: 150px;
+			@media (max-width: 1024.98px) {
+				padding: 0;
+			}
+		}
+		.img {
+			display: block;
+		}
 		.video {
 			height: 100%;
 			width: 100%;
 			iframe {
 				width: 100%;
 				height: 100%;
+				pointer-events: none;
 			}
 		}
 	}
 	.swiper-button-next {
-		right: -80px;
+		right: 80px;
 		width: 18px;
 		height: 34px;
 		&::after {
@@ -24,9 +41,12 @@
 			width: 100%;
 			height: 100%;
 		}
+		@media (max-width: 1024.98px) {
+			right: 10px;
+		}
 	}
 	.swiper-button-prev {
-		left: -80px;
+		left: 80px;
 		width: 18px;
 		height: 34px;
 		&::after {
@@ -35,11 +55,14 @@
 			width: 100%;
 			height: 100%;
 		}
+		@media (max-width: 1024.98px) {
+			left: 10px;
+		}
 	}
 	.swiper-pagination {
-		bottom: -70px;
+		bottom: 70px;
 		left: 50%;
-		transform: translateY(-50%);
+		transform: translateX(-50%);
 		.swiper-pagination-bullet {
 			width: 18px;
 			height: 18px;
@@ -70,7 +93,6 @@
 			padding-right: 30px;
 		}
 		.desc {
-		
 			.title {
 				p {
 					font-size: 127px;
@@ -82,6 +104,19 @@
 			}
 			.sub-title {
 				font-size: 23px;
+			}
+		}
+		@media (max-width: 1024.98px) {
+			margin-right: -10px;
+			margin-left: -10px;
+			flex-direction: column;
+			justify-items: center;
+			> div {
+				padding-left: 10px;
+				padding-right: 10px;
+				flex: 0 0 auto;
+				width: auto;
+				max-width: 100%;
 			}
 		}
 	}
@@ -114,21 +149,44 @@
 	.logo-selection {
 		margin-top: 200px;
 		margin-bottom: 200px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		.desc {
 			background: linear-gradient(92deg , #8ec8fb 0%, #ffffff 100%);
 			position: relative;
 			padding-right: 40px;
 			padding-left: calc(30% - 323px);
+			margin: unset;
+			margin-left: -150px;
 			a {
 				justify-content: flex-end;
 			}
-			.img {
-				position: absolute;
-				top: 50%;
-				right: 70%;
-				transform: translateY(-50%);
-				width: 323px;
-				height: 332px;
+		}
+		.img {
+			z-index: 1;
+		}
+		@media (max-width: 1024.98px) {
+			margin-top: 50px;
+			margin-bottom: 50px;
+		}
+		@media (max-width: 767.98px) {
+			.desc {
+				a {
+					font-size: 40px;
+				}
+			}
+		}
+		@media (max-width: 575.98px) {
+			flex-direction: column;
+			.desc {
+				margin-left: unset;
+				max-width: 100%;
+				text-align: center;
+				padding: 0;
+				a {
+					justify-content: center;
+				}
 			}
 		}
 	}
@@ -153,6 +211,13 @@
 			strong {
 				font-family: SFUIDisplay-Black;
 			}
+		}
+		@media (max-width: 767.98px) {
+			padding: 40px 20px;
+		}
+		@media (max-width: 575.98px) {
+			padding: 0;
+			background: unset;
 		}
 		
 	}
@@ -194,6 +259,33 @@
 					font-family: SFUIDisplay-Black;
 					padding: 0 20px;
 				}
+			}
+		}
+		@media (max-width: 1024.98px) {
+			.row {
+				margin-left: -10px;
+				margin-right: -10px;
+			
+			}
+			.item {
+				padding: 0 10px;
+				flex: 0 0 33.3333333%;
+				max-width: 33.3333333%;
+				align-self: center;
+				text-align: center;
+				margin-bottom: 10px;
+				
+			}
+		}
+		@media (max-width: 575.98px) {
+			.item {
+				padding: 0 10px;
+				flex: 0 0 50%;
+				max-width: 50%;
+				align-self: center;
+				text-align: center;
+				margin-bottom: 10px;
+				
 			}
 		}
 	}
@@ -241,6 +333,14 @@
 				margin-left: auto;
 				margin-right: auto;
 			}
+			@media (max-width: 767.98px) {
+				h3 {
+					&::after,
+					&::before {
+						content: none;
+					}
+				}
+			}
 		}
 		.row-wrapper {
 			.list-vote {
@@ -258,11 +358,6 @@
 				}
 			}
 		}
-
-		&:nth-child(2) {
-			margin-top: 0;
-		}
-
 	
 	}
 
@@ -580,6 +675,7 @@
 }
 
 .index-5 {
+	margin-bottom: 120px;
 	.logo-index-5 {
 		max-width: 604px;
 		width: 100%;
@@ -614,5 +710,214 @@
 
 	area {
 		cursor: pointer;
+	}
+}
+.index-6 {
+	margin-bottom: 100px;
+	.info-program {
+		background: url(../assets/images/new-vline/glow-big.png) no-repeat;
+		background-size: 100% 100%;
+		position: relative;
+		.btn {
+			position: absolute;
+			width: 80%;
+			height: 114px;
+			top: -4%;
+			max-width: 80%;
+			left: 50%;
+			transform: translateX(-50%);
+			background: linear-gradient(92deg,#8ec8fb 0,#fff 100%);
+			a {
+				text-align: center;
+				font-family: SFUIDisplay-Black;
+				display: flex;
+				height: 100%;
+				font-size: 40px;
+				align-items: center;
+				justify-content: center;
+			}
+		}
+		@media (max-width: 767.98px) {
+			background: unset;
+			.btn {
+				position: relative;
+				width: 100%;
+				top: unset;
+				max-width: 100%;
+				transform: unset;
+				left: unset;
+				margin-bottom: 10px;
+				a {
+					font-size: 25px;
+				}
+			}
+			.info-program__wrapper {
+				padding-top: unset;
+				padding-bottom: 0;
+				width: 100%;
+				.schedule,
+				.step-join { 
+					max-width: 100%;
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
+	
+
+	.info-program__wrapper {
+		width: 80%;
+		margin: 0 auto;
+		padding-top: 130px;
+		padding-bottom: 80px;
+		text-align: center;
+		h3 {
+			display: inline-block;
+			background-image:linear-gradient(90deg,#eac722 0%, #f78354 51%, #fd28cb 100%);
+			background-clip: text;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			font-family: SFUIDisplay-Black;
+			font-size: 40px;
+		}
+		p {
+			font-size: 30px;
+			span {
+				font-size: 30px;
+				font-family: SFUIDisplay-Black;
+			}
+		}
+		.schedule,
+		.step-join {
+			text-align: left;
+			max-width: 700px;
+			margin: 0 auto;
+			margin-bottom: 50px;
+			.item {
+				display: flex;
+				margin-bottom: 5px;
+				
+				.time {
+					background:linear-gradient(90deg,#eac722 0%, #f78354 51%, #fd28cb 100%);
+					height: 54px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					padding: 0 20px;
+					border-radius: 25px;
+					p {
+						font-size: 40px;
+						font-family: SFUIDisplay-Black;
+					}
+				}
+				.desc {
+					padding-left: 15px;
+					p {
+						font-size: 31px;
+						font-family: SFUIDisplay-Black;
+					}
+				}
+			}
+		}
+		> p {
+			// &:first-child {
+				margin-bottom: 20px;
+			// }
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+		
+	}
+	
+}
+.index-7 {
+	background: #131313;
+	padding-top: 30px;
+	margin-bottom: 90px;
+	.title-section {
+		margin-bottom: 30px;
+		text-align: center;
+		h3 {
+			display: inline-block;
+			background-image:linear-gradient(90deg,#eac722 0%, #f78354 51%, #fd28cb 100%);
+			background-clip: text;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			font-family: SFUIDisplay-Black;
+			font-size: 40px;
+		}
+	}
+	.block-video {
+		display: flex;
+		margin-left: -10px;
+		margin-right: -10px;
+		.item-video {
+			padding-left: 10px;
+			padding-right: 10px;
+			position: relative;
+			.img {
+				margin-bottom: 10px;
+				position: relative;
+				&::after {
+					content: "";
+					position: absolute;
+					background: url(../assets/images/new-vline/video-icon.png) no-repeat;
+					top: 50%;
+					left: 50%;	
+					width: 133px;
+					height: 133px;
+					transform: translate(-50% , -50%);
+				}
+				&::before {
+					content: "";
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					background: rgba($color: #000000, $alpha: .61);
+					top: 0;
+					left: 0;
+				}
+			}
+			.desc {
+				margin-bottom: 10px;
+				text-align: center;
+				p {
+					font-size: 40px;
+					font-family: SFUIDisplay-Black;
+				}
+			}
+			
+		}
+		@media (max-width: 1024.98px) {
+			flex-wrap: wrap;
+			.item-video {
+				flex: 0 0 50%;
+				max-width: 50%;
+			}
+		}
+		@media (max-width: 575.98px) {
+			.item-video {
+				flex: 0 0 100%;
+				max-width: 100%;
+			}
+		}
+	}
+	
+}
+.rule-pc {
+	text-align: center;
+	display: none;
+	margin-bottom: 90px;
+	@media (min-width: 576px) {
+		display: block;
+	}
+}
+.rule-mobile {
+	text-align: center;
+	display: block;
+	margin-bottom: 90px;
+	@media (min-width: 576px) {
+		display: none;
 	}
 }
