--- a/src/components/_layout/_header.pug
+++ b/src/components/_layout/_header.pug
@@ -18,12 +18,12 @@ header
 									img.ofc(src="./assets/images/new-vline/user-icon.png", alt="", srcset="")
 				.navBar
 					.nav-item
-						a.nav-link(href="") TRANG CHỦ
+						a.nav-link(href="javascript:;" data-scroll-to="1") TRANG CHỦ
 					.nav-item
-						a.nav-link(href="") VLIVE AWARDS
+						a.nav-link(href="javascript:;" data-scroll-to="2") VLIVE AWARDS
 					.nav-item
-						a.nav-link(href="") BÌNH CHỌN
+						a.nav-link(href="javascript:;" data-scroll-to="3") BÌNH CHỌN
 					.nav-item
-						a.nav-link(href="") VHEARTBEAT
+						a.nav-link(href="javascript:;" data-scroll-to="4") VHEARTBEAT
 					.nav-item
-						a.nav-link(href="") QUY ĐỊNH
+						a.nav-link(href="javascript:;" data-scroll-to="5") QUY ĐỊNH
