--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -66,9 +66,9 @@
 					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
 				.desc
 					p 2016
-.rule-pc
+.rule-pc(data-scroll-id="5")
 	.img
 		img(src="./assets/images/new-vline/rule-pc.png", alt="")
-.rule-mobile
+.rule-mobile(data-scroll-id="5")
 	.img
 		img(src="./assets/images/new-vline/rule-mobile.jpg", alt="")
